message and request edited
